fix: safari tbody::after overflow

--- a/page-components/youbike/stop-info/section2-result.module.scss
+++ b/page-components/youbike/stop-info/section2-result.module.scss
@@ -8,6 +8,7 @@
     width: 100%;
     height: fit-content;
     font-weight: 300;
+    position: relative;
 }
 
 
@@ -100,7 +101,6 @@
 .tbody{
     position:relative;
 
-
     &::after{
         position: absolute;
 
@@ -109,7 +109,7 @@
         justify-content: center;
         font-size: 3rem;
         font-weight: 600;
-        bottom:0%;
+        top:0%;
         left: 0%;
         width: 100%;
         height:100%;
